Criadas telas e roteamentos para cadastro de empresas e funcionários.

--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,9 +1,11 @@
-<mat-toolbar class="header mat-elevation-z3">
-    <div class="icon">
-        <i class="doc-icon material-icons">list_alt</i>
-        <div class="icon-text-area">
-            <div class="main-text">Gerenciador</div>
-            <div class="subtitle-text">Empresas / Funcionários</div>
+<mat-toolbar class="header">
+    <a routerLink="/">
+        <div class="icon">
+            <i class="doc-icon material-icons">list_alt</i>
+            <div class="icon-text-area">
+                <div class="main-text">Gerenciador</div>
+                <div class="subtitle-text">Empresas / Funcionários</div>
+            </div>
         </div>
-    </div>
+    </a>
 </mat-toolbar>
