--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -1,13 +1,15 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 .header {
-    height: 80px;
+    height: 75px;
     display: flex;
     justify-content: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    cursor: pointer;
 }
 
 .icon {
@@ -18,10 +20,6 @@
     background-color: rgba(17, 91, 188, 0.925);
     border-radius: 8px;
     box-shadow: 2px 2px 2px gray;
-}
-
-.icon:hover {
-    cursor: default;
 }
 
 .icon-text-area {
