Implementada nova etapa do frontend e ajustes de conexão do API Express.

--- a/frontend/src/app/components/company/company-create/company-create.component.html
+++ b/frontend/src/app/components/company/company-create/company-create.component.html
@@ -1,1 +1,2 @@
-<p>company-create works!</p>
+<button mat-raised-button (click)="onSave()">Salvar</button>
+<button mat-raised-button (click)="onCancel()" color="primary">Cancelar</button>
