--- a/frontend/src/app/components/employee/employee-create/employee-create.component.html
+++ b/frontend/src/app/components/employee/employee-create/employee-create.component.html
@@ -1,1 +1,2 @@
 <button mat-raised-button (click)="onSave()">Salvar</button>
+<button mat-raised-button (click)="onCancel()" color="primary">Cancelar</button>
