--- a/frontend/src/app/components/employee/employee-add-company/employee-add-company.component.html
+++ b/frontend/src/app/components/employee/employee-add-company/employee-add-company.component.html
@@ -1,11 +1,11 @@
 <mat-card class="container">
-    <h1 class="title">Remover Empresa</h1>
+    <h1 class="title">Adicionar Empresa</h1>
     
     <div class="search-container">
         <div>
             <mat-form-field class="input"><input name="cnpj" matInput placeholder="CNPJ" [(ngModel)]="company.cnpj" required></mat-form-field>
-            <button class="search-btn" mat-raised-button (click)="onRemoveCompany()">
-                <i class="material-icons">work_off</i>
+            <button class="search-btn" mat-raised-button (click)="onAddCompany()">
+                <i class="material-icons">work</i>
             </button>
         </div>
     </div>
