--- a/frontend/src/app/views/company/company.component.html
+++ b/frontend/src/app/views/company/company.component.html
@@ -1,5 +1,5 @@
 <mat-card class="container">
     <mat-card-title class="title"><h1>Empresa</h1></mat-card-title>
     <app-company-read></app-company-read>
-    <div class="btn-create"><button mat-raised-button (click)="create()" color="primary">Cadastrar</button></div>
+    <div class="btn-create"><button mat-raised-button (click)="create()" color="primary">Nova Empresa</button></div>
 </mat-card>
