--- a/frontend/src/app/views/employee/employee.component.html
+++ b/frontend/src/app/views/employee/employee.component.html
@@ -1,5 +1,5 @@
 <mat-card class="employee">
     <mat-card-title class="title"><h1>Funcionário</h1></mat-card-title>
     <app-employee-read></app-employee-read>
-    <div class="btn-create"><button mat-raised-button (click)="create()" color="primary">Cadastrar</button></div>
+    <div class="btn-create"><button mat-raised-button (click)="create()" color="primary">Novo Funcionário</button></div>
 </mat-card>
