--- a/frontend/src/app/components/employee/employee-read/employee-read.component.html
+++ b/frontend/src/app/components/employee/employee-read/employee-read.component.html
@@ -57,7 +57,7 @@
             <button mat-raised-button (click)="onRemoveCompany()">
                 Remover Empresa <i class="material-icons">work_off</i>
             </button>
-            <button mat-raised-button color="warn">
+            <button mat-raised-button color="warn" (click)="onDelete()">
                 Deletar Funcionário <i class="material-icons">delete_forever</i>
             </button>
         </div>
